--- a/Pr03Shining Text/index.html
+++ b/Pr03Shining Text/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
   <title>Shining Text</title>
+  <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
+  <p>The truth was, he was a great explorer</p>
   
 </body>
 </html>
