--- a/Pr10  (-) Social media icon/index.html
+++ b/Pr10  (-) Social media icon/index.html
@@ -13,7 +13,7 @@
         <span></span>
         <span></span>
         <span></span>
-        <span class="fab fa-facebook-square" aria-hidden="true"></span>
+        <span class="fa fa-facebook" aria-hidden="true"></span>
       </a>
     </li>
     <li>
