--- a/Pr10  (-) Social media icon/index.html
+++ b/Pr10  (-) Social media icon/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Layered Social Media Icon Hover Effects</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
 </head>
 <body>
   <ul>
@@ -22,7 +22,7 @@
         <span></span>
         <span></span>
         <span></span>
-        <span class="fab fa-twitter"></span>
+        <span class="fa fa-twitter" aria-hidden="true"></span>
       </a>
     </li>
     <li>
@@ -31,7 +31,7 @@
         <span></span>
         <span></span>
         <span></span>
-        <span class="fab fa-google-plus-g"></span>
+        <span class="fa fa-google-plus" aria-hidden="true"></span>
       </a>
     </li>
     <li>
@@ -40,7 +40,7 @@
         <span></span>
         <span></span>
         <span></span>
-        <span class="fab fa-linkedin-in"></span>
+        <span class="fa fa-linkedin" aria-hidden="true"></span>
       </a>
     </li>
     <li>
@@ -49,7 +49,7 @@
         <span></span>
         <span></span>
         <span></span>
-        <span class="fab fa-instagram"></span>
+        <span class="fa fa-instagram" aria-hidden="true"></span>
       </a>
     </li>
   </ul>
