--- a/yes/index.html
+++ b/yes/index.html
@@ -8,5 +8,10 @@
   </head>
   <body>
     <h1>These are my practice projects</h1>
+    <ul>
+      <li>
+        <a href="Pr01 Bubble\webpage2.html">Pr01 Bubble</a>
+      </li>
+    </ul>
   </body>
 </html>
