--- a/yes/index.html
+++ b/yes/index.html
@@ -16,10 +16,13 @@
         <a href="Pr02 Neon Button/webpage.html">Pr02 Neon Button</a>
       </li>
       <li>
-        <a href="Pr03 Shining Text/index.html">Pr02 Neon Button</a>
+        <a href="Pr03 Shining Text/index.html">Pr03 Shining Text</a>
       </li>
       <li>
-        <a href="Pr04 Neumorphism UI Button/index.html">Pr02 Neon Button</a>
+        <a href="Pr04 Neumorphism UI Button/index.html">Pr04 Neumorphism UI Button</a>
+      </li>
+      <li>
+        <a href="Pr05 Transparent Login/index.html">Pr05 Transparent Login</a>
       </li>
     </ul>
   </body>
