--- a/yes/index.html
+++ b/yes/index.html
@@ -24,6 +24,28 @@
       <li>
         <a href="Pr05 Transparent Login/index.html">Pr05 Transparent Login</a>
       </li>
+      <li>
+        <a href="Pr06 Creative Menu/index.html">Pr06 Creative Menu</a>
+      </li>
+      <li>
+        <a href="Pr07 Loader Ring/index.html">Pr07 Loader Ring</a>
+      </li>
+      <li>
+        <a href="Pr08 Ghost Text/index.html">Pr08 Ghost Text</a>
+      </li>
+      <li>
+        <a href="Pr09 Wavy Background/index.html">Pr09 Wavy Background</a>
+      </li>
+      <li>
+        <a href="Pr10 Social media icon/index.html">Pr10 Social media icon</a>
+      </li>
+      <li>
+        <a href="Pr12 Soft Text Shadow/index.html">Pr12 Soft Text Shadow</a>
+      </li>
+      <li>
+        <a href="Pr13 Box Shadow Loading/index.html">Pr13 Box Shadow Loading</a>
+      </li>
     </ul>
+    
   </body>
 </html>
