--- a/yes/index.html
+++ b/yes/index.html
@@ -37,7 +37,10 @@
         <a href="Pr09 Wavy Background/index.html">Pr09 Wavy Background</a>
       </li>
       <li>
-        <a href="Pr10 Social media icon/index.html">Pr10 Social media icon</a>
+        <a href="Pr10 Social media icon/index.html">Pr10 Social media icon (-)</a>
+      </li>
+      <li>
+        <a href="Pr11 Sticky Section Scrolling/index.html">Pr11 Sticky Section Scrolling (-)</a>
       </li>
       <li>
         <a href="Pr12 Soft Text Shadow/index.html">Pr12 Soft Text Shadow</a>
