--- a/yes/index.html
+++ b/yes/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
+    <title>My Practice Projects on Firebase</title>
 
   </head>
   <body>
@@ -47,6 +47,9 @@
       </li>
       <li>
         <a href="Pr13 Box Shadow Loading/index.html">Pr13 Box Shadow Loading</a>
+      </li>
+      <li>
+        <a href="Pr14 Button/index.html">Pr14 Creative Button </a>
       </li>
     </ul>
     
