--- a/yes/index.html
+++ b/yes/index.html
@@ -54,6 +54,9 @@
       <li>
         <a href="Pr15 Login Form/index.html">Pr15 Animated Login Form </a>
       </li>
+      <li>
+        <a href="Pr16 Three buttons/index.html">Pr16 Three buttons </a>
+      </li>
     </ul>
     
   </body>
