--- a/yes/index.html
+++ b/yes/index.html
@@ -55,7 +55,10 @@
         <a href="Pr15 Login Form/index.html">Pr15 Animated Login Form </a>
       </li>
       <li>
-        <a href="Pr16 Three buttons/index.html">Pr16 Three buttons </a>
+        <a href="Pr16 Three buttons/index.html">Pr16 Three buttons</a>
+      </li>
+      <li>
+        <a href="Pr17 Text Portrait/index.html">Pr17 Text Portrait</a>
       </li>
     </ul>
     
