--- a/yes/Pr18 Complite Website Nr.1/index.html
+++ b/yes/Pr18 Complite Website Nr.1/index.html
@@ -3,8 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <title>Complete Website</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <section id="header">
+    <div class="container">
+      <img src="images/logo.png" class="logo">
+      <div class="header-text">
+        <h1>The purpose is to<br>teach, bring learning to people</h1>
+        <span class="square"></span>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis a dolore dolorem fugiat nihil adipisci, iste quo porro aliquid odio?</p>
+        <button class="common-btn">Read More</button>
+        <div class="line">
+          <span class="line-1"></span>
+          <span class="line-2"></span>
+          <span class="line-3"></span>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
