--- a/yes/Pr18 Complite Website Nr.1/index.html
+++ b/yes/Pr18 Complite Website Nr.1/index.html
@@ -15,12 +15,59 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis a dolore dolorem fugiat nihil adipisci, iste quo porro aliquid odio?</p>
         <button class="common-btn">Read More</button>
         <div class="line">
-          <span class="line-1"></span>
-          <span class="line-2"></span>
+          <span class="line-1"></span><br>
+          <span class="line-2"></span><br>
           <span class="line-3"></span>
         </div>
       </div>
     </div>
   </section>
+
+  <nav id="sideNav">
+    <ul>
+      <li><a href="#">HOME</a></li>
+      <li><a href="#">ABOUT US</a></li>
+      <li><a href="#">FEATURES</a></li>
+      <li><a href="#">COURSES</a></li>
+      <li><a href="#">OFFER</a></li>
+      <li><a href="#">CONTACT</a></li>
+    </ul>
+  </nav>
+  <img src="images/menu.png" id="menuBtn">
+
+  <!----About---->
+  <section id="about">
+    <div class="about-left-col">
+      <img src="images/about.png">
+    </div>
+    <div class="about-right-col">
+      <div class="about-text">
+        <h1>About Us</h1>
+        <span class="square"></span>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis doloribus impedit harum eveniet odit quae placeat eligendi, quia labore nobis veritatis ipsam ad velit sed optio. Distinctio fugiat ut vitae enim minima, veritatis, unde nostrum aliquid quaerat culpa modi tempore dolores voluptatem pariatur, accusantium harum? Sunt, nesciunt aperiam? Voluptatum, velit.</p><br><br>
+        <div class="line">
+          <span class="line-1"></span><br>
+          <span class="line-2"></span><br>
+          <span class="line-3"></span>
+        </div>
+        <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non accusantium pariatur sed quaerat</h2>
+        <h3>----Samciucov Valentin</h3>
+      </div>
+    </div>
+  </section>
+
+  <script>
+    var menuBtn = document.getElementById("menuBtn");
+    var sideNav = document.getElementById("sideNav");
+    sideNav.style.right = "-250px"
+    menuBtn.onclick = function(){
+      if(sideNav.style.right == "-250px"){
+        sideNav.style.right = "0"
+      }
+      else{
+        sideNav.style.right = "-250px";
+      }
+    }
+  </script>
 </body>
 </html>
