--- a/yes/index.html
+++ b/yes/index.html
@@ -60,7 +60,10 @@
       <li>
         <a href="Pr17 Text Portrait/index.html">Pr17 Text Portrait</a>
       </li>
+      <li>
+        <a href="Pr18 Complite Website Nr.1/index.html">Pr18 Complite Website Nr.1</a>
+      </li>
     </ul>
-    
+
   </body>
 </html>
