--- a/yes/index.html
+++ b/yes/index.html
@@ -63,6 +63,9 @@
       <li>
         <a href="Pr18 Complite Website Nr.1/index.html">Pr18 Complite Website Nr.1</a>
       </li>
+      <li>
+        <a href="Pr19 Loading Animation/index.html">Pr19 Loading Animation</a>
+      </li>
     </ul>
 
   </body>
